--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Compumundo Hipermega Red
+            <span id="tagline"> Tu blog</span>
         </div>
         <div id="post">
             <h1>Este es el titutlo atractivo e interesante del post</h1>
