--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Compumundo Hipermega Red
-            <span id="tagline"> Tu blog</span>
+            <span id="tagline"> Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -23,7 +23,9 @@
                 Mucho mas que ir a conferencias o salir en youtube. Excepto si eres 
                 un rockstart. Pero estadisticamente no lo eres... por ahora.
             </p>
-
+            <p>
+                suscribete y dale like
+            </p>
         </div>
     </div>
 
