--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Compumundo Hipermega Red .com
+            Compumundo Hipermega Red 
             <span id="tagline"> Tu blog de confianza</span>
         </div>
         <div id="post">
